<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Nanar</string>
    <string name="placeholder">placeholder</string>
    <string name="viewholder">viewholder</string>

    <!--Videos list-->
    <string name="loading">Loading...</string>
    <string name="no_video">Nothing here... for now</string>
    <string name="no_result">No results...</string>

    <!--Video Details Activity-->
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="message_add_to_favorites">Good choice !</string>
    <string name="message_remove_to_favorites">You changed your mind ?</string>
    <string name="share_video_subject">Check out this video I have found on %s !</string>
    <string name="youtube_init_failure">Error while opening Youtube player, please update your Youtube application</string>

    <!--Add Video Activity-->
    <string name="publish_video">Publish !</string>
    <string name="publish_video_activity_title">Publish a video</string>
    <string name="error_add_video">An error occurred while adding this video, please check your Internet connection !</string>
    <string name="error_video_already_exist">This video has already been added to the app, no need to add it again !</string>
    <string name="error_bad_video">You can only share Youtube videos on this app...</string>
    <string name="success_video_added">The video has been added !</string>
    <string name="add_tag">add tags...</string>

    <!--Search-->
    <string name="search_title">Search videos</string>
    <string name="search_activity_title">Search results</string>
    <string name="filter">Filter :</string>

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="browse_videos">Browse videos</string>
    <string name="my_favourites">My favorites</string>
    <string name="tags">POPULAR TAGS</string>

    <!-- Contact -->
    <string name="contact_menu_title">Contact</string>
    <string name="mail_address">guillaume.gouchon@gmail.com</string>
    <string name="contact_title">Question about </string>
    <string name="contact_support_via">Contact support via&#8230;</string>
    <string name="no_mail_client">There are no email clients installed on your device&#8230;</string>

    <!-- Rate Dialog -->
    <string name="rate_menu_title">Rate app</string>
    <string name="rate_title">Rate the app ?</string>
    <string name="rate_dont_want">No, thanks</string>
    <string name="rate_later">Remind me later</string>
    <string name="rate_now">Rate now !</string>
    <string name="rate_message">If you enjoy using %s, please take a moment to rate it.\n\nThanks for your support !</string>

    <!-- About Dialog -->
    <string name="about_menu_title">About</string>
    <string name="about_title">About Nanar</string>
    <string name="about_credits">Developed by <a href="http://gouchon.com">Guillaume Gouchon</a>.\n\nThis app is dedicated to all the bad movies fans around the world, who enjoy spending nights watching Chuck (Norris), Christophe (Lambert), Steven (Seagal), Richard (Harrison), etc...</string>
    <string name="about_blog">All the videos are retrieved from Youtube.\n\nYou can add new videos by using the share button on the Youtube application !</string>
    <string name="about_version">Version : %s</string>

    <!-- Share app -->
    <string name="share_menu_title">Share</string>
    <string name="share_via">Share via</string>
    <string name="share_subject">Check out %s on Android !</string>
    <string name="share_message">Watch and re-watch all the bad movies punchlines you love ! Get the app on Google Play !\nhttps://play.google.com/store/apps/details?id=%s</string>


</resources>
